adding report pdf

--- a/report/go_enrichment.tex
+++ b/report/go_enrichment.tex
@@ -19,7 +19,6 @@
 % Title Page -------------------------------------------------------------------
 \maketitle
 
-\tableofcontents
 \begin{abstract}
 When performing \textit{Enrichment Analysis} in bioinformatics, there are several different tools and methods available to determine whether certain gene sets are statistically enriched. 
 These tools usually approach this problem in different ways, using different statistical tests and assumptions.
@@ -30,6 +29,10 @@ The Java implementation is also evaluated in terms of runtime and the properties
 
 
 \end{abstract}
+
+\newpage
+
+\tableofcontents
 
 \newpage
 
@@ -652,6 +655,7 @@ to at least identify more than half of the gene sets discovered by \textit{fgsea
 
 
 % ------------------------------------------------------------------------------
+\newpage
 \printbibliography
 % ------------------------------------------------------------------------------
 
